src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>StayClassy_ID__c</fullName>
        <label>StayClassy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Duration__c</fullName>
        <description>Formula field returning the duration of the campaign in seconds.</description>
        <formula>IF(OR(ISBLANK(rC_Giving__Start_Date_Time__c), ISBLANK(rC_Giving__End_Date_Time__c)), 0, 60 * 60 * 24 * (rC_Giving__End_Date_Time__c - rC_Giving__Start_Date_Time__c))</formula>
        <inlineHelpText>Duration of the campaign in seconds.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Form_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populated, look up to the form mapping record related to this campaign.</description>
        <label>Form Mapping</label>
        <referenceTo>rC_Connect__Form_Mapping__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Heartland_Merchant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populated Heartland Merchant record that will be used to process Giving records associated with this Campaign.</description>
        <inlineHelpText>Heartland Merchant record that will be used to process Giving records associated with this Campaign.</inlineHelpText>
        <label>Heartland Merchant</label>
        <referenceTo>rC_Payments__Heartland_Merchant__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Payment_Processor__c</fullName>
        <description>Selects which payment processor to use based on values populated in &apos;Sage Merchant&apos; and &apos;Heartland Merchant&apos; lookups. If no value is present, the system uses the value in Payment_Method_setting__c.Default_Payment_Processor__c</description>
        <inlineHelpText>Selects which payment processor to use based on values populated in &apos;Sage Merchant&apos; and &apos;Heartland Merchant&apos; lookups.</inlineHelpText>
        <label>Payment Processor</label>
        <picklist>
            <picklistValues>
                <fullName>Sage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heartland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Sage_Merchant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populated Sage Merchant record that will be used to process Giving records associated with this Campaign.</description>
        <label>Sage Merchant</label>
        <referenceTo>rC_Payments__Sage_Merchant__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Affiliation__c</fullName>
        <description>Manually populated, this field indicates the Affiliation this Campaign represents.</description>
        <inlineHelpText>Affiliation this Campaign represents.</inlineHelpText>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Group 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Appeal_Segment__c</fullName>
        <description>Giving level or operational area the Campaign is soliciting.</description>
        <inlineHelpText>Giving level or operational area the Campaign is soliciting.</inlineHelpText>
        <label>Appeal Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Basic Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Operating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Planning and Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Underwriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Average_Gift_Hierarchy__c</fullName>
        <description>Total expected amount of gifts in the hierarchy divided by count of gifts in the hierarchy assuming it is a parent campaign</description>
        <formula>IF(AND(rC_Giving__Is_Parent__c), IF(HierarchyNumberOfOpportunities &gt; 0, rC_Giving__Expected_Giving_Amount_Hierarchy__c  /  HierarchyNumberOfOpportunities, NULL), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total expected amount of gifts in the hierarchy divided by count of gifts in the hierarchy</inlineHelpText>
        <label>Average Gift - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Average_Gift__c</fullName>
        <description>The expected giving amount total for the campaign divided by the number of giving records for the campaign</description>
        <formula>IF(NumberOfOpportunities &gt; 0, rC_Giving__Expected_Giving_Amount__c  /  NumberOfOpportunities, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Giving Amount divided by number of giving records</inlineHelpText>
        <label>Average Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Amount_Hierarchy__c</fullName>
        <description>Populated by trigger, displays the aggregated sum of the amounts in the heirarchy you are likely to close per your Giving Stage configuration.</description>
        <inlineHelpText>Aggregated sum of the amounts in the heirarchy you are likely to close per your Giving Stage configuration.</inlineHelpText>
        <label>Best Case Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Amount__c</fullName>
        <description>Automatically populated field including amounts you are likely to close. See the Giving Stage configuration</description>
        <label>Best Case Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</description>
        <formula>IMAGE(&apos;/img/samples/color_yellow.gif&apos;, &apos;yellow&apos;, 10, MIN(150, rC_Giving__Best_Case_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Best_Case_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Best_Case_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Case Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Best_Case_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <label>Best Case Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Type__c</fullName>
        <description>Type of gifts the Campaign is soliciting.</description>
        <inlineHelpText>Type of gifts the Campaign is soliciting.</inlineHelpText>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Channel__c</fullName>
        <description>Method in which the Campaign will be communicated to constituents.</description>
        <inlineHelpText>Method in which the Campaign will be communicated to constituents.</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Amount_Hierarchy__c</fullName>
        <description>Gives the total closed amount from giving in the hierarchy</description>
        <inlineHelpText>Total of closed amount for the hierarchy</inlineHelpText>
        <label>Closed Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Amount__c</fullName>
        <description>Sum of closed giving amount for the campaign</description>
        <label>Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Bar__c</fullName>
        <description>Formula field providing the percentage of closed amount from giving related to this Campaign.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10, MIN(150, rC_Giving__Closed_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Closed_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Closed_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Ratio__c</fullName>
        <description>Formula field providing the percentage of closed amount from giving related to this Campaign.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Closed_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <label>Closed Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Amount_Hierarchy__c</fullName>
        <description>Sum of committed giving amount for the campaign hierarchy</description>
        <inlineHelpText>Sum of committed giving amount for the campaign hierarchy</inlineHelpText>
        <label>Commit Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Amount__c</fullName>
        <description>Sum of committed giving amount for the campaign</description>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Bar__c</fullName>
        <description>Formula field providing the percentage of committed giving amount for this Campaign.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10, MIN(150, rC_Giving__Commit_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Commit_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Commit_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Ratio__c</fullName>
        <description>Formula field providing the percentage of committed giving amount for this Campaign.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Commit_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <label>Commit Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Cost_Per_Piece_Hierarchy__c</fullName>
        <description>Actual cost per hierarchy divided by number sent in hierarchy</description>
        <formula>IF(HierarchyNumberSent &gt; 0, HierarchyActualCost / HierarchyNumberSent, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual cost per hierarchy divided by number sent in hierarchy</inlineHelpText>
        <label>Cost Per Piece - Hierarchy</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Cost_Per_Piece__c</fullName>
        <description>Cost divided by number sent</description>
        <formula>IF(NumberSent &gt; 0, ActualCost / NumberSent, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost divided by number sent</inlineHelpText>
        <label>Cost Per Piece</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Cost_Per_Thousand_Hierarchy__c</fullName>
        <description>Actual cost of the hierarchy divided by number sent in hierarchy</description>
        <formula>IF(HierarchyNumberSent &gt; 0, HierarchyActualCost / (HierarchyNumberSent / 1000), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual cost of the hierarchy divided by number sent in hierarchy</inlineHelpText>
        <label>Cost Per Thousand - Hierarchy</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Cost_Per_Thousand__c</fullName>
        <description>Cost divided by number sent (in M)</description>
        <formula>IF(NumberSent &gt; 0, ActualCost / (NumberSent / 1000), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost divided by number sent (in M)</inlineHelpText>
        <label>Cost Per Thousand</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Creative_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populated, this field shows a lookup to a Product related to this camoaign.</description>
        <label>Creative Package</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Campaigns (Creative Package)</relationshipLabel>
        <relationshipName>Campaigns_Creative_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Amount_Hierarchy__c</fullName>
        <description>Automatically populated, this field shows the sum of all Giving Transaction amounts in the hierarchy with Stage: Open, Pending, Completed.</description>
        <inlineHelpText>Sum of all Giving Transaction amounts in the hierarchy  with Stage: Open, Pending, Completed.</inlineHelpText>
        <label>Current Giving Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Amount__c</fullName>
        <description>Automatically populated, this field shows the sum of all Giving Transaction amounts with Stage: Open, Pending, Completed.</description>
        <label>Current Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Effort__c</fullName>
        <description>Manually populated field indicating the number of times correspondence has been sent this Campaign.</description>
        <inlineHelpText>Number of times correspondence has been sent this Campaign.</inlineHelpText>
        <label>Effort</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__End_Date_Time__c</fullName>
        <description>End Date and Time of Campaign.</description>
        <inlineHelpText>End Date and Time of Campaign.</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Amount_Hierarchy__c</fullName>
        <description>The sum of the expected giving amount for all giving records related to this campaign</description>
        <inlineHelpText>Sum of expected giving amount for all associated giving records</inlineHelpText>
        <label>Expected Giving Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Amount__c</fullName>
        <description>Automatically populated, provides the sum of the expected giving amount for all giving records related to this campaign.</description>
        <label>Expected Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__External_ID__c</fullName>
        <description>External System or Legacy ID.</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populated, this field indicates the General Accounting Unit where gifts and funds associated with this Campaign will be allocated by default.</description>
        <inlineHelpText>General Accounting Unit where gifts and funds associated with this Campaign will be allocated by default.</inlineHelpText>
        <label>General Accounting Unit</label>
        <referenceTo>rC_Giving__GAU__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Type_Engine__c</fullName>
        <description>To override a Giving record&apos;s Giving Type Engine</description>
        <inlineHelpText>To override a Giving record&apos;s Giving Type Engine</inlineHelpText>
        <label>Giving Type Engine</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Type__c</fullName>
        <description>To override a Giving record&apos;s Giving Type, used in Public Media GTR</description>
        <inlineHelpText>To override a Giving record&apos;s Giving Type, used in Public Media GTR</inlineHelpText>
        <label>Giving Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a campaign has sub-campaigns associated with it or not</description>
        <inlineHelpText>Checked if campaign has sub-campaigns</inlineHelpText>
        <label>Parent Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Shopper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Campaign as a Shopper campaign.</description>
        <inlineHelpText>Designates Campaign as a Shopper campaign.</inlineHelpText>
        <label>Shopper?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Amount_Hierarchy__c</fullName>
        <description>Sum of omitted giving amount for the campaign hierarchy</description>
        <inlineHelpText>Sum of omitted giving amount for the campaign hierarchy</inlineHelpText>
        <label>Omitted Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Amount__c</fullName>
        <description>Sum of omitted giving amount for the campaign</description>
        <label>Omitted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Bar__c</fullName>
        <description>Automatically populated, provides the percentage of omitted giving amount for the campaign.</description>
        <formula>IMAGE(&apos;/img/samples/color_red.gif&apos;, &apos;red&apos;, 10, MIN(150, rC_Giving__Omitted_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Omitted_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Omitted_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Omitted Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Ratio__c</fullName>
        <description>Automatically populated, provides the percentage of omitted giving amount for the campaign.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Omitted_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <label>Omitted Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Percent_Goal_Hierarchy__c</fullName>
        <description>Percentage of Goal Attained for the hierarchy</description>
        <formula>if(rC_Giving__Is_Parent__c = True, if(HierarchyExpectedRevenue&gt;0,( rC_Giving__Expected_Giving_Amount_Hierarchy__c  / HierarchyExpectedRevenue ),null), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Goal Attained for the hierarchy</inlineHelpText>
        <label>Percent Goal - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Percent_Goal__c</fullName>
        <description>Percentage of Goal Attained for the campaign</description>
        <formula>if( ExpectedRevenue &gt;0, (rC_Giving__Expected_Giving_Amount__c / ExpectedRevenue),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Goal Attained for the campaign</inlineHelpText>
        <label>Percent Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pipeline_Amount_Hierarchy__c</fullName>
        <description>Sum of pipeline giving amount for the campaign hierarchy</description>
        <inlineHelpText>Sum of pipeline giving amount for the campaign hierarchy</inlineHelpText>
        <label>Pipeline Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pipeline_Amount__c</fullName>
        <description>Sum of pipeline giving amount for the campaign</description>
        <label>Pipeline Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pipeline_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving amounts from all open transactions.</description>
        <formula>IMAGE(&apos;/img/samples/color_yellow.gif&apos;, &apos;yellow&apos;, 10, MIN(150, rC_Giving__Pipeline_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Pipeline_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Pipeline_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pipeline_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving amounts from all open transactions.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Pipeline_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <label>Pipeline Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__ROI_Hierarchy__c</fullName>
        <description>Uses the expected giving amount from giving of the hierarchy minus the cost from campaigns in the hierarchy and divides the sum by the actual cost from the campaign hierarchy</description>
        <formula>IF( rC_Giving__Is_Parent__c  = True,IF(HierarchyActualCost &gt; 0, (rC_Giving__Expected_Giving_Amount_Hierarchy__c-HierarchyActualCost) /  HierarchyActualCost, null),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected giving amount from giving of the hierarchy minus the cost from campaigns in the hierarchy and divides the sum by the actual cost from the campaign hierarchy</inlineHelpText>
        <label>ROI (%) - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__ROI__c</fullName>
        <description>Uses the expected giving amount from giving minus the cost from campaign and divides the sum by the actual cost from the campaign</description>
        <formula>IF(ActualCost &gt; 0, (rC_Giving__Expected_Giving_Amount__c-ActualCost)  /  ActualCost, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected giving amount from giving minus the cost from campaign and divides the sum by the actual cost from the campaign</inlineHelpText>
        <label>ROI (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refunded_Amount_Hierarchy__c</fullName>
        <description>Populated by trigger, provides the sum of refunded giving amounts for the campaign hierarchy.</description>
        <inlineHelpText>Sum of refunded giving amount for the campaign hierarchy.</inlineHelpText>
        <label>Refunded Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refunded_Amount__c</fullName>
        <description>Populated by trigger, provides the sum of refunded giving amounts for the campaign.</description>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refunded_Bar__c</fullName>
        <description>Formula field providing the percentage of refunded giving amounts associated with this Campaign.</description>
        <formula>IMAGE(&apos;/img/samples/color_red.gif&apos;, &apos;red&apos;, 10, rC_Giving__Refunded_Ratio__c) + &apos; &apos; + IF(rC_Giving__Refunded_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Refunded_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refunded Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refunded_Ratio__c</fullName>
        <description>Formula field providing the percentage of refunded giving amounts associated with this Campaign.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Refunded_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <label>Refunded Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Remaining_Goal_Hierarchy__c</fullName>
        <description>Formula field providing the expected revenue for the hierarchy of the campaign minus the expected giving amount for the hierarchy of the campaign.</description>
        <formula>if(rC_Giving__Is_Parent__c  = True, HierarchyExpectedRevenue  -  rC_Giving__Expected_Giving_Amount_Hierarchy__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected revenue for the hierarchy of the campaign minus the expected giving amount for the hierarchy of the campaign.</inlineHelpText>
        <label>Remaining Goal - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>